syntax = "proto3";

package freestyle.rpc.demo;

service Greeter {
    rpc SayHello (MessageRequest) returns (MessageReply) {}
    rpc SayGoodbye (MessageRequest) returns (MessageReply) {}
    rpc LotsOfReplies(MessageRequest) returns (stream MessageReply) {}
    rpc LotsOfGreetings(stream MessageRequest) returns (MessageReply) {}
    rpc BidiHello(stream MessageRequest) returns (stream MessageReply) {}
}

message MessageRequest {
    string name = 1;
}

message MessageReply {
    string message = 1;
}
